<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btnStartHttp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStart"
            android:text="@string/http"
            android:textSize="12sp"/>
        <Button
            android:id="@+id/btnStartStream"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStart"
            android:text="@string/stream"
            android:textSize="12sp"/>
        <Button
            android:id="@+id/btnStartSD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStart"
            android:text="@string/sd"
            android:textSize="12sp"/>
        <Button
            android:id="@+id/btnStartUri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStart"
            android:text="@string/uri"
            android:textSize="12sp"/>
        <Button
            android:id="@+id/btnStartRaw"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStart"
            android:text="@string/raw"
            android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearlayout1"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/btnPause"
            android:text="@string/pause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:textSize="12sp"/>
        <Button
            android:id="@+id/btnResume"
            android:text="@string/resume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:textSize="12sp"/>
        <Button
            android:id="@+id/btnStop"
            android:text="@string/stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:textSize="12sp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chbLoop"
            android:text="@string/loop"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearlayout2"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btnBackward"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/backward"
            android:textSize="12sp"/>
        <Button
            android:id="@+id/btnForward"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forward"
            android:textSize="12sp"/>
        <Button
            android:id="@+id/btnInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/info"
            android:textSize="12sp"/>
    </LinearLayout>
</RelativeLayout>
